# CompetitiveProgramming

./: CMakeLists.txt
week_01/: haplesshedonism.cpp  mirroredpalindromes.cpp
week_02/: beachbars.cpp  burcoin.cpp
week_03/: crossrunning.cpp  crossrunning_cheated.cpp  timebomb.cpp
