cmake_minimum_required(VERSION 2.6)

project(haplesshedonism)
add_executable(haplesshedonism "week_01/haplesshedonism.cpp")

project(mirroredpalindromes)
add_executable(mirroredpalindromes "week_01/mirroredpalindromes.cpp")

project(beachbars)
add_executable(beachbars "week_02/beachbars.cpp")

project(burcoin)
add_executable(burcoin "week_02/burcoin.cpp")

project(crossrunning)
add_executable(crossrunning "week_03/crossrunning.cpp")

project(crossrunning_cheated)
add_executable(crossrunning_cheated "week_03/crossrunning_cheated.cpp")

project(timebomb)
add_executable(timebomb "week_03/timebomb.cpp")
